Test commit to lexach91 branch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Project title here</title>
 </head>
 <body>
-    <div class="test">Test</div>
+    <div class="test">Test commit</div>
+
 </body>
 </html>
