--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Project title here</title>
+    <title>HoliDayTris</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="test">Test commit</div>
-
+    
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
