Add code to generate grid, tetrominoes variables, and basic style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div id="grid">        
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
