Add and style game buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <div id="grid">        
     </div>
+    <div class="buttons">
+        <button class="btn-game" id="start">Start</button>
+        <button class="btn-game" id="pause">Stop</button>
+        <button class="btn-game" id="reset">Reset</button>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
