Add functions to draw and remove tetris pieces

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="buttons">
         <button class="btn-game" id="start">Start</button>
-        <button class="btn-game" id="pause">Stop</button>
+        <button class="btn-game" id="pause">Pause</button>
         <button class="btn-game" id="reset">Reset</button>
     </div>
     <script src="assets/js/script.js"></script>
