Add next piece grid, score, and code to update it

--- a/index-alex.html
+++ b/index-alex.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="grid">        
+    <div id="game-container">
+        <div id="next-piece"></div>
+        <div id="grid">        
+        </div>
+        <div id="score-container">
+            <div>Score:<span id="score">0</span></div>
+            <div>Speed:<span id="speed">0</span></div>
+        </div>
+        
     </div>
     <div class="buttons">
         <button class="btn-game" id="start">Start</button>
