--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Project title here</title>
+    <title>HoliDayTris</title>
+    <link rel="stylesheet" href="styles-martina.css">
 </head>
 <body>
-    <div class="test">Test</div>
+    <div id="game-container">
+        <div id="next-piece"></div>
+        <div id="grid">        
+        </div>
+        <div id="score-container">
+            <div>Score:<span id="score">0</span></div>
+            <div>Speed:<span id="speed">0</span></div>
+        </div>
+        
+    </div>
+    <div class="buttons">
+        <button class="btn-game" id="start">Start</button>
+        <button class="btn-game" id="pause">Pause</button>
+        <button class="btn-game" id="reset">Reset</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
