add brick images, presents and background image and cloud effect

--- a/index-anders.html
+++ b/index-anders.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>HoliDayTris</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    
+    <link rel="stylesheet" href="assets-anders/styles-anders.css">
 </head>
 <body>
+    <div class="moving-clouds" style="background-image: url('./assets-anders/images/clouds.png'); ">.....................................................cloud effect only works on dark background-images</div>
+    <div class="more-snow"></div>
     <div id="game-container">
         <div id="next-piece"></div>
         <div id="grid">        
