Adding eric flies

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,19 @@
     <title>HoliDayTris</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
+
+    <h1>hello-test</h1>
     <div id="game-container">
         <div id="next-piece"></div>
-        <div id="grid">        
+        <div id="grid">
         </div>
         <div id="score-container">
             <div>Score:<span id="score">0</span></div>
             <div>Speed:<span id="speed">0</span></div>
         </div>
-        
+
     </div>
     <div class="buttons">
         <button class="btn-game" id="start">Start</button>
@@ -26,4 +30,5 @@
     </div>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
