Add eric style and index code for snowflake effect

--- a/index-martina.html
+++ b/index-martina.html
@@ -9,6 +9,42 @@
  
 </head>
 <body>
+
+    <div id="backg">
+        <div class="snowflakes" aria-hidden="true">
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❄
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❄
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❄
+            </div>
+        </div>
+    </div>
+
     <div id="game-container">
         <div id="next-piece"></div>
         <div id="grid">        
