--- a/index-alex.html
+++ b/index-alex.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
     <title>HoliDayTris</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <link rel="stylesheet" href="styles-martina.css">
 </head>
 <body>
     <div id="game-container">
