--- a/index-alex.html
+++ b/index-alex.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
     <title>HoliDayTris</title>
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-    <link rel="stylesheet" href="styles-martina.css">
+    <link rel="stylesheet" href="assets/css/style-alex.css">
+    <!-- <link rel="stylesheet" href="styles-martina.css"> -->
 </head>
 <body>
+    <div class="moving-clouds" style="background-image: url('assets/images/clouds.png'); "></div>
+
     <div id="game-container">
         <div id="next-piece"></div>
         <div id="grid">        
@@ -18,12 +20,45 @@
             <div>Score:<span id="score">0</span></div>
             <div>Speed:<span id="speed">0</span></div>
         </div>
-        
     </div>
     <div class="buttons">
         <button class="btn-game" id="start">Start</button>
         <button class="btn-game" id="pause">Pause</button>
         <button class="btn-game" id="reset">Reset</button>
+    </div>
+    <div id="backg">
+        <div class="snowflakes" aria-hidden="true">
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❄
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❄
+            </div>
+            <div class="snowflake">
+                ❅
+            </div>
+            <div class="snowflake">
+                ❆
+            </div>
+            <div class="snowflake">
+                ❄
+            </div>
+        </div>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
