--- a/index-alex.html
+++ b/index-alex.html
@@ -13,7 +13,9 @@
     <div class="moving-clouds" style="background-image: url('assets/images/clouds.png'); "></div>
 
     <div id="game-container">
-        <div id="next-piece"></div>
+        <div id="next-piece">
+            <h2>Next piece:</h2>
+        </div>
         <div id="grid">        
         </div>
         <div id="score-container">
@@ -60,6 +62,7 @@
             </div>
         </div>
     </div>
+    <footer></footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
