--- a/index-alex.html
+++ b/index-alex.html
@@ -13,21 +13,23 @@
     <div class="moving-clouds" style="background-image: url('assets/images/clouds.png'); "></div>
 
     <div id="game-container">
-        <div id="next-piece">
-            <h2>Next piece:</h2>
+        <div class="left-panel">
+            <div id="next-piece">
+            </div>
+            <div class="buttons">
+                <button class="btn-game" id="start">Start</button>
+                <button class="btn-game" id="pause">Pause</button>
+                <button class="btn-game" id="reset">Reset</button>
+            </div>
         </div>
         <div id="grid">        
         </div>
         <div id="score-container">
-            <div>Score:<span id="score">0</span></div>
-            <div>Speed:<span id="speed">0</span></div>
+            <div>Score: <span id="score">0</span></div>
+            <div>Speed: <span id="speed">0</span></div>
         </div>
     </div>
-    <div class="buttons">
-        <button class="btn-game" id="start">Start</button>
-        <button class="btn-game" id="pause">Pause</button>
-        <button class="btn-game" id="reset">Reset</button>
-    </div>
+    
     <div id="backg">
         <div class="snowflakes" aria-hidden="true">
             <div class="snowflake">
