--- a/index-alex.html
+++ b/index-alex.html
@@ -8,6 +8,11 @@
     <title>HoliDayTris</title>
     <link rel="stylesheet" href="assets/css/style-alex.css">
     <!-- <link rel="stylesheet" href="styles-martina.css"> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
 </head>
 <body>
     <div class="moving-clouds" style="background-image: url('assets/images/clouds.png'); "></div>
