Delete unused files

--- a/index-alex.html
+++ b/index-alex.html
@@ -69,7 +69,11 @@
             </div>
         </div>
     </div>
-    <footer></footer>
+    <footer>
+        <div class="developers">
+            
+        </div>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
