Add images and validation-images

--- a/index-alex.html
+++ b/index-alex.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="tetris game">
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
     <title>HoliDayTris</title>
     <link rel="stylesheet" href="assets/css/style-alex.css">
@@ -15,6 +17,7 @@
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <script src="https://cdn.jsdelivr.net/npm/fireworks-js@latest/dist/fireworks.js"></script>
 </head>
+
 <body>
     <div class="moving-clouds" style="background-image: url('assets/images/clouds.png'); "></div>
     <div id="fireworks"></div>
@@ -28,14 +31,14 @@
                 <button class="btn-game" id="reset">Reset</button>
             </div>
         </div>
-        <div id="grid">        
+        <div id="grid">
         </div>
         <div id="score-container">
             <div>Score: <span id="score">0</span></div>
             <div>Speed: <span id="speed">0</span></div>
         </div>
     </div>
-    
+
     <div id="backg">
         <div class="snowflakes" aria-hidden="true">
             <div class="snowflake">
@@ -77,4 +80,5 @@
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
