Add links to external resources

--- a/index-alex.html
+++ b/index-alex.html
@@ -19,7 +19,10 @@
 </head>
 
 <body>
+    <!-- Effect for clouds moving -->
     <div class="moving-clouds" style="background-image: url('assets/images/clouds.png'); "></div>
+
+    <!-- Effect for fireworks  -->
     <div id="fireworks"></div>
     <div id="game-container">
         <div class="left-panel">
@@ -39,6 +42,7 @@
         </div>
     </div>
 
+    <!-- Effect for snowflakes falling -->
     <div id="backg">
         <div class="snowflakes" aria-hidden="true">
             <div class="snowflake">
