--- a/index-alex.html
+++ b/index-alex.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="tetris game">
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
     <title>HoliDayTris</title>
-    <link rel="stylesheet" href="assets/css/style-alex.css">
-    <!-- <link rel="stylesheet" href="styles-martina.css"> -->
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
